crates/keron-lang/tests/corpus/errors/check/match_arm_body_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `match` arm body type `String` does not match earlier arm type `Int`
  --> 5:14
  |
5 |     "off" => "zero",
  |              ^^^^^^
